# spindle

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/spindle-adapters/: Cargo.toml
crates/spindle-adapters/examples/: sqlite_demo.rs
crates/spindle-adapters/migrations/: V0001__initial_schema.sql  V0002__vec0_search_embedding.sql  V0003__fts5_search.sql  V0004__book_updated_at.sql  V0005__narrator_voice.sql  V0006__validator_context_hash.sql
crates/spindle-adapters/src/: agent_config.rs  ai.rs  export.rs  format.rs  guidance.rs  lib.rs
crates/spindle-adapters/src/sqlite/: error.rs  import_service.rs  json_records.rs  mod.rs  pool.rs  project_resources.rs  records.rs  repository.rs  row.rs  service.rs  source_bridge.rs  validators.rs
crates/spindle-adapters/src/sqlite/import/: character.rs  consolidate.rs  extract.rs  final_state.rs  mod.rs  narrative.rs  prompts.rs  slicer.rs  world.rs
crates/spindle-adapters/tests/: check_consistency_phase_four_validators.rs  check_consistency_subjects_narrowing.rs  export_bible_typed_records.rs  pull_chapter_from_external_markdown.rs  relationship_absolute_value_setter.rs  scene_impact_methods.rs
crates/spindle-core/: Cargo.toml
crates/spindle-core/src/: context_bundle.rs  lib.rs  models.rs  provenance.rs  search.rs  subject.rs  subject_snapshot.rs
crates/spindle-core/src/canonical_facts/: mod.rs  validator.rs
crates/spindle-core/src/style/: mod.rs  scanner.rs
crates/spindle-core/src/validators/: mod.rs  registry.rs
crates/spindle-core/src/voice/: drift.rs  mod.rs
crates/spindle-core/src/world_rules/: mod.rs  scanner.rs
crates/spindle-core/tests/: architecture_boundaries.rs  canonical_facts.rs
crates/spindle-core/tests/canonical_facts/: alias_out_of_window.rs  boolean_drift.rs  cole_age_drift.rs  cole_age_no_drift.rs  date_drift.rs  enum_choice_contrast.rs  hair_color_contrast.rs  helpers.rs  legacy_untyped_skipped.rs  list_alias_locality.rs  list_forbidden_present.rs  list_required_missing.rs  performance_large_fact_set.rs  range_out_of_bounds.rs  string_generic_mismatch.rs  unicode_punctuation.rs
crates/spindle-harness/: Cargo.toml
crates/spindle-harness/src/: artifacts.rs  execution.rs  main.rs  mcp.rs  operator.rs  plan.rs  state.rs
crates/spindle-mcp/: Cargo.toml
crates/spindle-mcp/src/: http.rs  json_utils.rs  main.rs  proxy.rs  resources.rs  server.rs  sqlite_integration_tests.rs  tools.rs
crates/spindle-skills/: Cargo.toml  build.rs
crates/spindle-skills/src/: lib.rs
docs/: README.md  spindle-agent-config.md  spindle-architecture.md  spindle-harness-seed.example.json  spindle-harness-usage.md  spindle-implementation-brief.md
docs/spindle-skills/: README.md
references/: anti-slop.md  mru-guide.md  swain-scene-sequel.md  voice-differentiation.md
skills/bible-librarian/: SKILL.md
skills/character-creator/: SKILL.md
skills/continuity-editor/: SKILL.md
skills/editor/: SKILL.md
skills/manuscript-importer/: SKILL.md
skills/plot-architect/: SKILL.md
skills/revision-manager/: SKILL.md
skills/scene-writer/: SKILL.md
skills/worldbuilder/: SKILL.md
testdata/import/: alias-heavy.txt  docx-document.xml  epub-chapter-1.xhtml  epub-chapter-2.xhtml  epub-title.txt  final-state.txt  html-chapter.html  litrpg-system.txt  markdown-chapter.md  messy-structure.txt  narrative-arc.txt  review-only.txt  time-aware.txt  tiny-chapter.txt  world-signals.txt
