[workspace]
members = [
  "crates/spindle-adapters",
  "crates/spindle-core",
  "crates/spindle-harness",
  "crates/spindle-mcp",
  "crates/spindle-skills",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.2.0"

[workspace.dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
axum = { version = "0.8.4", features = ["json"] }
clap = { version = "4.5.38", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
dirs = "6.0.0"
html2text = "0.13.6"
regex = "1.11.1"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rmcp = { version = "1.3.0", features = ["server", "transport-io", "transport-streamable-http-server", "schemars"] }
roxmltree = "0.20.0"
schemars = { version = "1.1.0", features = ["chrono04"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
rusqlite = { version = "0.32", features = ["bundled", "blob", "functions", "trace", "load_extension", "serde_json"] }
tokio-rusqlite = "0.6"
refinery = { version = "0.8", features = ["rusqlite"] }
sqlite-vec = "0.1"
ulid = "1"
tempfile = "3.23.0"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.17"
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
