[package]
name = "spindle-adapters"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
dirs.workspace = true
html2text.workspace = true
reqwest.workspace = true
roxmltree.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
spindle-core = { path = "../spindle-core" }
spindle-skills = { path = "../spindle-skills" }
# Phase 6: SurrealDB removed. The SQLite stack is the sole persistence
# layer; the surrealdb crate is no longer a dep.
rusqlite.workspace = true
tokio-rusqlite.workspace = true
refinery.workspace = true
sqlite-vec.workspace = true
ulid.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true

[features]
perf = []
