[package]
name = "spindle-harness"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
rmcp = { workspace = true, features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
serde.workspace = true
serde_json.workspace = true
spindle-core = { path = "../spindle-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
